{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 132,
  "lineage": "e6425775-2fd1-06e2-0fa3-a470025028c0",
  "resources": [
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00fb4d96886f55a31",
            "arn": "arn:aws:ec2:us-west-2:269733383066:instance/i-0001963167fdeb318",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "redpod-aws-sno-ng5sr-master-profile",
            "id": "i-0001963167fdeb318",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "r5.2xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0bb1459edf4cd7bfc"
              }
            ],
            "primary_network_interface_id": "eni-0bb1459edf4cd7bfc",
            "private_dns": "ip-10-0-157-100.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.157.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-2:269733383066:key/04b2fa83-dabe-435d-8a0c-16995b6cc183",
                "throughput": 125,
                "volume_id": "vol-0eddf76c3a174d1bc",
                "volume_size": 64,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062e11c0ad89ec137",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-master-0",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-master-0",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "redpod-aws-sno-ng5sr-master-0-vol",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "vpc_security_group_ids": [
              "sg-0bc2612f8cd2a2449"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:269733383066:targetgroup/redpod-aws-sno-ng5sr-aint/a6774ea57bbcccfc-20230418131001681700000006",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:269733383066:targetgroup/redpod-aws-sno-ng5sr-aint/a6774ea57bbcccfc",
            "target_id": "10.0.157.100"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:269733383066:targetgroup/redpod-aws-sno-ng5sr-sint/195ef49b7e3e0270-20230418131001677700000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:269733383066:targetgroup/redpod-aws-sno-ng5sr-sint/195ef49b7e3e0270",
            "target_id": "10.0.157.100"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:269733383066:targetgroup/redpod-aws-sno-ng5sr-aext/db0dcdf1fb5adef4-20230418131001654700000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:269733383066:targetgroup/redpod-aws-sno-ng5sr-aext/db0dcdf1fb5adef4",
            "target_id": "10.0.157.100"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:network-interface/eni-0bb1459edf4cd7bfc",
            "description": "Created By OpenShift Installer",
            "id": "eni-0bb1459edf4cd7bfc",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:53:3d:90:57:e5",
            "owner_id": "269733383066",
            "private_dns_name": "ip-10-0-157-100.us-west-2.compute.internal",
            "private_ip": "10.0.157.100",
            "private_ip_list": [
              "10.0.157.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.157.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0bc2612f8cd2a2449"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062e11c0ad89ec137",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-master-0",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-master-0",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:subnet/subnet-062e11c0ad89ec137",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "available_ip_address_count": 8187,
            "cidr_block": "10.0.128.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062e11c0ad89ec137",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2a",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:subnet/subnet-0b7492341d587788c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "available_ip_address_count": 8187,
            "cidr_block": "10.0.160.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7492341d587788c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2d",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:subnet/subnet-0f90f117ba797e8a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "available_ip_address_count": 8187,
            "cidr_block": "10.0.192.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f90f117ba797e8a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2b",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:subnet/subnet-0300d56d9a698c189",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "available_ip_address_count": 8187,
            "cidr_block": "10.0.224.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0300d56d9a698c189",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2c",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:subnet/subnet-066b52f29945b72d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "available_ip_address_count": 8187,
            "cidr_block": "10.0.0.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066b52f29945b72d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-public-us-west-2a",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:subnet/subnet-01159a12dcbb8ee5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "available_ip_address_count": 8187,
            "cidr_block": "10.0.32.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01159a12dcbb8ee5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-public-us-west-2d",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:subnet/subnet-04537e3a84941019d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "available_ip_address_count": 8187,
            "cidr_block": "10.0.64.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04537e3a84941019d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-public-us-west-2b",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:subnet/subnet-0a37f8e397f033ed3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "available_ip_address_count": 8187,
            "cidr_block": "10.0.96.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a37f8e397f033ed3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-public-us-west-2c",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:vpc/vpc-0bb8f41fd22e09336",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02e9eceeff1f4f57b",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0f555143ded0ccc73",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bb8f41fd22e09336",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-003c84d50172bdd73",
            "owner_id": "269733383066",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-vpc",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058b46999ef17b568",
            "domain": "vpc",
            "id": "eipalloc-058b46999ef17b568",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-227-108-190.us-west-2.compute.amazonaws.com",
            "public_ip": "44.227.108.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-eip-us-west-2a",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-eip-us-west-2a",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0baa1c67310401853",
            "domain": "vpc",
            "id": "eipalloc-0baa1c67310401853",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-224-178-20.us-west-2.compute.amazonaws.com",
            "public_ip": "44.224.178.20",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-eip-us-west-2d",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-eip-us-west-2d",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022dc7006ad37e1c7",
            "domain": "vpc",
            "id": "eipalloc-022dc7006ad37e1c7",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-189-1-184.us-west-2.compute.amazonaws.com",
            "public_ip": "54.189.1.184",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-eip-us-west-2b",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-eip-us-west-2b",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f9620fe0d0d7c19",
            "domain": "vpc",
            "id": "eipalloc-03f9620fe0d0d7c19",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-226-253-153.us-west-2.compute.amazonaws.com",
            "public_ip": "44.226.253.153",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-eip-us-west-2c",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-eip-us-west-2c",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:internet-gateway/igw-063af3d71d90c6317",
            "id": "igw-063af3d71d90c6317",
            "owner_id": "269733383066",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-igw",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-igw",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_external",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:269733383066:loadbalancer/net/redpod-aws-sno-ng5sr-ext/edb5a7999aef866c",
            "arn_suffix": "net/redpod-aws-sno-ng5sr-ext/edb5a7999aef866c",
            "dns_name": "redpod-aws-sno-ng5sr-ext-edb5a7999aef866c.elb.us-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:269733383066:loadbalancer/net/redpod-aws-sno-ng5sr-ext/edb5a7999aef866c",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "redpod-aws-sno-ng5sr-ext",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01159a12dcbb8ee5b"
              },
              {
                "subnet_id": "subnet-04537e3a84941019d"
              },
              {
                "subnet_id": "subnet-066b52f29945b72d0"
              },
              {
                "subnet_id": "subnet-0a37f8e397f033ed3"
              }
            ],
            "subnets": [
              "subnet-01159a12dcbb8ee5b",
              "subnet-04537e3a84941019d",
              "subnet-066b52f29945b72d0",
              "subnet-0a37f8e397f033ed3"
            ],
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-ext",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-ext",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-0bb8f41fd22e09336",
            "zone_id": "Z18D5FSROUN65G"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.public",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_internal",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:269733383066:loadbalancer/net/redpod-aws-sno-ng5sr-int/f9284c1ead4cd234",
            "arn_suffix": "net/redpod-aws-sno-ng5sr-int/f9284c1ead4cd234",
            "dns_name": "redpod-aws-sno-ng5sr-int-f9284c1ead4cd234.elb.us-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:269733383066:loadbalancer/net/redpod-aws-sno-ng5sr-int/f9284c1ead4cd234",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "redpod-aws-sno-ng5sr-int",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0300d56d9a698c189"
              },
              {
                "subnet_id": "subnet-062e11c0ad89ec137"
              },
              {
                "subnet_id": "subnet-0b7492341d587788c"
              },
              {
                "subnet_id": "subnet-0f90f117ba797e8a3"
              }
            ],
            "subnets": [
              "subnet-0300d56d9a698c189",
              "subnet-062e11c0ad89ec137",
              "subnet-0b7492341d587788c",
              "subnet-0f90f117ba797e8a3"
            ],
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-int",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-int",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-0bb8f41fd22e09336",
            "zone_id": "Z18D5FSROUN65G"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_external_api",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:269733383066:listener/net/redpod-aws-sno-ng5sr-ext/edb5a7999aef866c/ea5594dea120e084",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:269733383066:targetgroup/redpod-aws-sno-ng5sr-aext/db0dcdf1fb5adef4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:269733383066:listener/net/redpod-aws-sno-ng5sr-ext/edb5a7999aef866c/ea5594dea120e084",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:269733383066:loadbalancer/net/redpod-aws-sno-ng5sr-ext/edb5a7999aef866c",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_external",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.public",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_api",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:269733383066:listener/net/redpod-aws-sno-ng5sr-int/f9284c1ead4cd234/259a21463c7e839c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:269733383066:targetgroup/redpod-aws-sno-ng5sr-aint/a6774ea57bbcccfc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:269733383066:listener/net/redpod-aws-sno-ng5sr-int/f9284c1ead4cd234/259a21463c7e839c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:269733383066:loadbalancer/net/redpod-aws-sno-ng5sr-int/f9284c1ead4cd234",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_services",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:269733383066:listener/net/redpod-aws-sno-ng5sr-int/f9284c1ead4cd234/fc0b3954f6f656e9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:269733383066:targetgroup/redpod-aws-sno-ng5sr-sint/195ef49b7e3e0270",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:269733383066:listener/net/redpod-aws-sno-ng5sr-int/f9284c1ead4cd234/fc0b3954f6f656e9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:269733383066:loadbalancer/net/redpod-aws-sno-ng5sr-int/f9284c1ead4cd234",
            "port": 22623,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_external",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:269733383066:targetgroup/redpod-aws-sno-ng5sr-aext/db0dcdf1fb5adef4",
            "arn_suffix": "targetgroup/redpod-aws-sno-ng5sr-aext/db0dcdf1fb5adef4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:269733383066:targetgroup/redpod-aws-sno-ng5sr-aext/db0dcdf1fb5adef4",
            "lambda_multi_value_headers_enabled": false,
            "name": "redpod-aws-sno-ng5sr-aext",
            "port": 6443,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-aext",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-aext",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_internal",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:269733383066:targetgroup/redpod-aws-sno-ng5sr-aint/a6774ea57bbcccfc",
            "arn_suffix": "targetgroup/redpod-aws-sno-ng5sr-aint/a6774ea57bbcccfc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:269733383066:targetgroup/redpod-aws-sno-ng5sr-aint/a6774ea57bbcccfc",
            "lambda_multi_value_headers_enabled": false,
            "name": "redpod-aws-sno-ng5sr-aint",
            "port": 6443,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-aint",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-aint",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:269733383066:targetgroup/redpod-aws-sno-ng5sr-sint/195ef49b7e3e0270",
            "arn_suffix": "targetgroup/redpod-aws-sno-ng5sr-sint/195ef49b7e3e0270",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "22623",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:269733383066:targetgroup/redpod-aws-sno-ng5sr-sint/195ef49b7e3e0270",
            "lambda_multi_value_headers_enabled": false,
            "name": "redpod-aws-sno-ng5sr-sint",
            "port": 22623,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-sint",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-sint",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_vpc_routes",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aba0f48e71dc0d66",
            "original_route_table_id": "rtb-003c84d50172bdd73",
            "route_table_id": "rtb-0840d155b27569c32",
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058b46999ef17b568",
            "connectivity_type": "public",
            "id": "nat-0c7253c5df74e7995",
            "network_interface_id": "eni-04324d55a300d6161",
            "private_ip": "10.0.4.135",
            "public_ip": "44.227.108.190",
            "subnet_id": "subnet-066b52f29945b72d0",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-nat-us-west-2a",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-nat-us-west-2a",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0baa1c67310401853",
            "connectivity_type": "public",
            "id": "nat-00baa7e64225a946a",
            "network_interface_id": "eni-0b5ab6cdb216f849f",
            "private_ip": "10.0.50.34",
            "public_ip": "44.224.178.20",
            "subnet_id": "subnet-01159a12dcbb8ee5b",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-nat-us-west-2d",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-nat-us-west-2d",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022dc7006ad37e1c7",
            "connectivity_type": "public",
            "id": "nat-0738aec813f1a2762",
            "network_interface_id": "eni-05fb833e8c3344490",
            "private_ip": "10.0.84.119",
            "public_ip": "54.189.1.184",
            "subnet_id": "subnet-04537e3a84941019d",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-nat-us-west-2b",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-nat-us-west-2b",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f9620fe0d0d7c19",
            "connectivity_type": "public",
            "id": "nat-0d26088dbe0d03e4c",
            "network_interface_id": "eni-021a4a7d4c0a323f9",
            "private_ip": "10.0.96.218",
            "public_ip": "44.226.253.153",
            "subnet_id": "subnet-0a37f8e397f033ed3",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-nat-us-west-2c",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-nat-us-west-2c",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-063af3d71d90c6317",
            "id": "r-rtb-0840d155b27569c321080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0840d155b27569c32",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "to_nat_gw",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eee2a0bfa6a4ea8f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c7253c5df74e7995",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eee2a0bfa6a4ea8f",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-042e7e99fea4fac6b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00baa7e64225a946a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-042e7e99fea4fac6b",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01d0345a891fe2c271080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0738aec813f1a2762",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01d0345a891fe2c27",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05eab8ff31bb5830d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d26088dbe0d03e4c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05eab8ff31bb5830d",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:route-table/rtb-0840d155b27569c32",
            "id": "rtb-0840d155b27569c32",
            "owner_id": "269733383066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-public",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-public",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routes",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:route-table/rtb-0eee2a0bfa6a4ea8f",
            "id": "rtb-0eee2a0bfa6a4ea8f",
            "owner_id": "269733383066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2a",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2a",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:route-table/rtb-042e7e99fea4fac6b",
            "id": "rtb-042e7e99fea4fac6b",
            "owner_id": "269733383066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2d",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2d",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:route-table/rtb-01d0345a891fe2c27",
            "id": "rtb-01d0345a891fe2c27",
            "owner_id": "269733383066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2b",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2b",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:route-table/rtb-05eab8ff31bb5830d",
            "id": "rtb-05eab8ff31bb5830d",
            "owner_id": "269733383066",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2c",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2c",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routing",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046bd5df502bf6462",
            "route_table_id": "rtb-0eee2a0bfa6a4ea8f",
            "subnet_id": "subnet-062e11c0ad89ec137"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028e943427a72a718",
            "route_table_id": "rtb-042e7e99fea4fac6b",
            "subnet_id": "subnet-0b7492341d587788c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0556b87ee5a0001ea",
            "route_table_id": "rtb-01d0345a891fe2c27",
            "subnet_id": "subnet-0f90f117ba797e8a3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a4be9bd20776afa",
            "route_table_id": "rtb-05eab8ff31bb5830d",
            "subnet_id": "subnet-0300d56d9a698c189"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_net",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b43fbee3423af29",
            "route_table_id": "rtb-0840d155b27569c32",
            "subnet_id": "subnet-066b52f29945b72d0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f37223d6bb8c7437",
            "route_table_id": "rtb-0840d155b27569c32",
            "subnet_id": "subnet-01159a12dcbb8ee5b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d277d93fb2ab4e2",
            "route_table_id": "rtb-0840d155b27569c32",
            "subnet_id": "subnet-04537e3a84941019d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d14acf4cb7536c8f",
            "route_table_id": "rtb-0840d155b27569c32",
            "subnet_id": "subnet-0a37f8e397f033ed3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:security-group/sg-0bc2612f8cd2a2449",
            "description": "Created By OpenShift Installer",
            "egress": [],
            "id": "sg-0bc2612f8cd2a2449",
            "ingress": [],
            "name": "terraform-20230418130916937100000001",
            "name_prefix": "terraform-",
            "owner_id": "269733383066",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-master-sg",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-master-sg",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:security-group/sg-0a726667f2a6238b5",
            "description": "Created By OpenShift Installer",
            "egress": [],
            "id": "sg-0a726667f2a6238b5",
            "ingress": [],
            "name": "terraform-20230418130916940100000002",
            "name_prefix": "terraform-",
            "owner_id": "269733383066",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-worker-sg",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-worker-sg",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_egress",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-2042089170",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_esp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-4270407531",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_esp_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-1721031439",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": "sg-0a726667f2a6238b5",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_etcd",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 2379,
            "id": "sgrule-4038135717",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-4179267691",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-1627878415",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": "sg-0a726667f2a6238b5",
            "timeouts": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_https",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 6443,
            "id": "sgrule-1372357979",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_icmp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": -1,
            "id": "sgrule-878820094",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-586401436",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-3136168696",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": "sg-0a726667f2a6238b5",
            "timeouts": null,
            "to_port": 500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_nat_t",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-3457614335",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_nat_t_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-1443554715",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": "sg-0a726667f2a6238b5",
            "timeouts": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-26032445",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-2576407897",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": "sg-0a726667f2a6238b5",
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-1037008566",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": "sg-0a726667f2a6238b5",
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-2782042834",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10257,
            "id": "sgrule-3392893848",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10257,
            "id": "sgrule-1378260988",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": "sg-0a726667f2a6238b5",
            "timeouts": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10259,
            "id": "sgrule-179771163",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10259,
            "id": "sgrule-2460676991",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": "sg-0a726667f2a6238b5",
            "timeouts": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-1204142841",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-3755484829",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": "sg-0a726667f2a6238b5",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6641,
            "id": "sgrule-3111628514",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6642,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6641,
            "id": "sgrule-560614022",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": "sg-0a726667f2a6238b5",
            "timeouts": null,
            "to_port": 6642,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-2754119536",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-1010131732",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": "sg-0a726667f2a6238b5",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-7808159",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-2557133051",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": "sg-0a726667f2a6238b5",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ssh",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 22,
            "id": "sgrule-1625912238",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-1976754515",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-3989767479",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": "sg-0a726667f2a6238b5",
            "timeouts": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_mcs",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 22623,
            "id": "sgrule-452667219",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc2612f8cd2a2449",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22623,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_egress",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-1971181201",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_esp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-905783570",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_esp_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-2917191030",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": false,
            "source_security_group_id": "sg-0bc2612f8cd2a2449",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-1001743037",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-2745730777",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": false,
            "source_security_group_id": "sg-0bc2612f8cd2a2449",
            "timeouts": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_icmp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": -1,
            "id": "sgrule-2383592333",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-3457935238",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-1443234786",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": false,
            "source_security_group_id": "sg-0bc2612f8cd2a2449",
            "timeouts": null,
            "to_port": 500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike_nat_t",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-213447465",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-3273837547",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-1530867599",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": false,
            "source_security_group_id": "sg-0bc2612f8cd2a2449",
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-4284517472",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": false,
            "source_security_group_id": "sg-0bc2612f8cd2a2449",
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-1736271876",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-4261348676",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-1709367584",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": false,
            "source_security_group_id": "sg-0bc2612f8cd2a2449",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_nat_t_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-2493847373",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": false,
            "source_security_group_id": "sg-0bc2612f8cd2a2449",
            "timeouts": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-504512717",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-2249172137",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": false,
            "source_security_group_id": "sg-0bc2612f8cd2a2449",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-3125666594",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-575670086",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": false,
            "source_security_group_id": "sg-0bc2612f8cd2a2449",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ssh",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 22,
            "id": "sgrule-783949551",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-3078427525",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-794884065",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0a726667f2a6238b5",
            "self": false,
            "source_security_group_id": "sg-0bc2612f8cd2a2449",
            "timeouts": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:subnet/subnet-062e11c0ad89ec137",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.128.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062e11c0ad89ec137",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2a",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2a",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:subnet/subnet-0b7492341d587788c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.160.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7492341d587788c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2d",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2d",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:subnet/subnet-0f90f117ba797e8a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.192.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f90f117ba797e8a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2b",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2b",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:subnet/subnet-0300d56d9a698c189",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.224.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0300d56d9a698c189",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2c",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-private-us-west-2c",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:subnet/subnet-066b52f29945b72d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066b52f29945b72d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-public-us-west-2a",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-public-us-west-2a",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:subnet/subnet-01159a12dcbb8ee5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01159a12dcbb8ee5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-public-us-west-2d",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-public-us-west-2d",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:subnet/subnet-04537e3a84941019d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04537e3a84941019d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-public-us-west-2b",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-public-us-west-2b",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:subnet/subnet-0a37f8e397f033ed3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a37f8e397f033ed3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269733383066",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-public-us-west-2c",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-public-us-west-2c",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:vpc/vpc-0bb8f41fd22e09336",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e5af2c31f41e9d61",
            "default_route_table_id": "rtb-003c84d50172bdd73",
            "default_security_group_id": "sg-077549d3f4e735f38",
            "dhcp_options_id": "dopt-0f555143ded0ccc73",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bb8f41fd22e09336",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-003c84d50172bdd73",
            "owner_id": "269733383066",
            "tags": {
              "Name": "redpod-aws-sno-ng5sr-vpc",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "Name": "redpod-aws-sno-ng5sr-vpc",
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:269733383066:vpc-endpoint/vpce-0aea41b03ab1da704",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-0aea41b03ab1da704",
            "owner_id": "269733383066",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01d0345a891fe2c27",
              "rtb-042e7e99fea4fac6b",
              "rtb-05eab8ff31bb5830d",
              "rtb-0840d155b27569c32",
              "rtb-0eee2a0bfa6a4ea8f"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "tags_all": {
              "kubernetes.io/cluster/redpod-aws-sno-ng5sr": "owned"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0bb8f41fd22e09336"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    }
  ]
}